package grep;

option java_package = "edu.uiuc.cs425.mp4.proto";
option java_outer_classname = "MessageProtos";

message GrepMessage {

  enum MessageType {
    GREP_REQUEST = 0;
    GREP_REPLY = 1;
  }  
  
  required MessageType type = 1;
  
  optional string command = 2;
  repeated string matched_lines = 3;
  required string sender_address = 4;
  optional string log_file_name = 5;
  
}

message KVMessage {
	enum MessageType {
		GET_REQUEST = 0;
		PUT_REQUEST = 1;
		UPDATE_REQUEST = 2;
		DELETE_REQUEST = 3;
		REPLY_SUCCESS = 4;
		REPLY_FAILURE_DUPLICATE_KEY = 5;
		REPLY_FAILURE_KEY_ERROR = 6; 
		REPLY_FAILURE_INVALID_REQUEST = 7;
	}
	
	enum ConsistencyLevel {
		ONE = 0;
		QUORUM = 1;
		ALL = 2;
		NONE = 4;
	}
	
	required MessageType type = 1;
	required string key = 2;
	optional bytes value = 3;
	required ConsistencyLevel consistencyLevel = 4;
		
}

message GossipMessage {

	enum MessageType {
    LIVE_HOSTS_REQUEST = 0;
    LIVE_HOSTS_REPLY = 1;
    GOSSIP = 2;
    GROUP_JOIN = 3;
    GROUP_LEAVE = 4;
   }
  
  
  message HostRecord {
    required string hostname = 1;
    required int32 counter = 2;
    required fixed64 machine_id = 3;
    required bool is_active = 4;  
  }
  
  required MessageType type = 1;
  repeated string live_hosts = 2;
  repeated HostRecord host_record = 3;
}